# edges

./: CMakeLists.txt  Doxyfile  README  README.md
src/: 2dconvolution.c  2dconvolution.h  CMakeLists.txt  Makefile  doxygen_mainpage.c  edge_detectors.c  edge_detectors.h  edges_ipol.c  gaussian_kernel.c  gaussian_kernel.h  test_fded.c  test_haralick.c  test_mh.c  test_mh_log.c
